--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "z-components",
+  "name": "z-web-components",
   "version": "0.0.1",
   "description": "A set of web components I'd like to use more often...",
-  "main": "lib/z-components.js",
+  "main": "lib/z-web-components.js",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "npm run build:demo && npm run build:lib",
     "build:demo": "parcel build src/index.html -d public",
-    "build:lib": "parcel build src/js/z-components.js -d lib --experimental-scope-hoisting"
+    "build:lib": "parcel build src/js/z-web-components.js -d lib --experimental-scope-hoisting",
+    "preare": "npm run build:lib"
   },
   "repository": {
     "type": "git",
@@ -25,12 +26,11 @@
     "url": "https://github.com/benavern/z-components/issues"
   },
   "homepage": "https://github.com/benavern/z-components#readme",
-  "dependencies": {
-    "lit-element": "^2.3.0",
-    "parcel-bundler": "^1.12.4"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "sass": "^1.26.2"
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.2",
+    "lit-element": "^2.3.0"
   },
   "browserslist": [
     ">2%",
