--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A set of web components I'd like to use more often...",
   "main": "lib/z-web-components.js",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "parcel src/index.njk",
     "build": "npm run build:demo && npm run build:lib",
-    "build:demo": "parcel build src/index.html -d public",
+    "build:demo": "parcel build src/index.njk -d public",
     "build:lib": "parcel build src/js/z-web-components.js -d lib --experimental-scope-hoisting",
     "cleanup": "rimraf .cache dist lib public",
     "prepare": "npm run cleanup && npm run build:lib"
@@ -27,9 +27,13 @@
     "url": "https://github.com/benavern/z-components/issues"
   },
   "homepage": "https://github.com/benavern/z-components#readme",
-  "dependencies": {},
+  "dependencies": {
+    "parcel-plugin-nunjucks": "^2.2.0"
+  },
   "devDependencies": {
+    "highlight.js": "^9.18.1",
     "lit-element": "^2.3.0",
+    "nunjucks": "^3.2.1",
     "parcel-bundler": "^1.12.4",
     "rimraf": "^3.0.2",
     "sass": "^1.26.2"
